--- a/index.html
+++ b/index.html
@@ -3,51 +3,34 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Échome Énergies – Solutions photovoltaïques pour professionnels</title>
+  <title>Echome Energies – Étude photovoltaïque sur-mesure</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
   <style>
-    /* Global */
+    /* GLOBAL */
     body { font-family: Arial, sans-serif; margin:0; padding:0; background:#f7f7f7; color:#333; }
     a { text-decoration:none; color: inherit; }
     h1,h2,h3 { margin:0; }
     .container { max-width:1100px; margin:0 auto; padding:20px; }
 
     /* HERO */
-    .hero { position:relative; height:90vh; background:url('hero-bg.jpg') center/cover no-repeat; display:flex; align-items:center; justify-content:center; color:#fff; text-align:center; }
+    .hero { position:relative; height:60vh; background:url('assets/hero-bg.jpg') center/cover no-repeat; display:flex; align-items:center; justify-content:center; color:#fff; text-align:center; }
     .hero-overlay { background:rgba(0,0,0,0.5); width:100%; height:100%; display:flex; flex-direction:column; align-items:center; justify-content:center; padding:20px; }
-    .hero img.logo { width:150px; margin-bottom:20px; }
-    .hero-content h1 { font-size:2.5rem; margin-bottom:15px; }
-    .hero-content p { font-size:1.2rem; margin-bottom:20px; }
-    .cta { background:#0078d7; color:#fff; padding:12px 25px; border-radius:8px; display:inline-block; transition:0.3s; }
-    .cta:hover { background:#005fa3; }
-
-    /* INTRO */
-    .intro { background:#fff; padding:60px 20px; text-align:center; }
-    .intro h2 { font-size:2rem; margin-bottom:15px; }
-    .intro p { font-size:1.1rem; max-width:800px; margin:0 auto; line-height:1.6; }
+    .hero h1 { font-size:2.5rem; margin-bottom:15px; }
+    .hero p { font-size:1.2rem; }
 
     /* FORMULAIRE */
-    .form-section { background:#e8f0f8; padding:60px 20px; }
-    .form-section h2 { text-align:center; font-size:2rem; margin-bottom:40px; }
-
+    .form-section { padding:60px 20px; background:#f7f7f7; }
     form { max-width:700px; margin:0 auto; background:#fff; padding:30px; border-radius:12px; box-shadow:0 4px 15px rgba(0,0,0,0.1); }
-
-    label { display:block; margin:15px 0 5px; font-weight:bold; }
-    input, select, textarea { width:100%; padding:10px; border-radius:6px; border:1px solid #ccc; font-size:1em; box-sizing:border-box; }
+    label { display:block; margin-top:15px; font-weight:bold; }
+    input, select, textarea { width:100%; padding:10px; margin-top:5px; border-radius:6px; border:1px solid #ccc; font-size:1rem; }
     textarea { resize:vertical; }
-
-    button.cta { width:100%; padding:12px; margin-top:20px; background:#0078d7; color:#fff; font-size:1.1em; border:none; border-radius:8px; cursor:pointer; transition:0.3s; }
-    button.cta:hover { background:#005fa3; }
-
-    .confidentialite { font-size:0.85em; color:#666; text-align:center; margin-top:15px; }
-
-    /* SLIDER */
-    .slider-wrapper { position:relative; width:100%; margin:20px 0; }
-    input[type="range"] { width:100%; -webkit-appearance:none; height:12px; border-radius:6px; background:#ddd; outline:none; }
-    input[type="range"]::-webkit-slider-thumb { -webkit-appearance:none; width:20px; height:20px; border-radius:50%; background:#555; cursor:pointer; position:relative; z-index:2; }
-    .puissance-badge { position:absolute; top:-35px; padding:5px 10px; border-radius:12px; color:#fff; font-weight:bold; pointer-events:none; transform:translateX(-50%); transition:left 0.1s, background-color 0.2s; }
-    .puissance-badge.bounce { animation:bounce 0.3s ease-out; }
-    @keyframes bounce { 0%{transform:translateX(-50%) translateY(0);}50%{transform:translateX(-50%) translateY(-10px);}100%{transform:translateX(-50%) translateY(0);} }
-    output { font-weight:bold; margin-left:5px; }
+    input[type="range"] { width:100%; margin-top:10px; }
+    output { display:block; text-align:right; margin-top:5px; font-weight:bold; }
+    button.cta { background:#0078d7; color:#fff; padding:15px 30px; font-size:1.2rem; border:none; border-radius:12px; margin-top:20px; cursor:pointer; box-shadow:0 4px 10px rgba(0,0,0,0.2); transition:0.3s; }
+    button.cta:hover { transform:translateY(-3px); box-shadow:0 6px 15px rgba(0,0,0,0.25); }
+    .confidentialite { margin-top:15px; font-size:0.9rem; color:#555; display:flex; align-items:center; gap:8px; }
+    .confidentialite img { width:16px; height:16px; }
 
     /* FOOTER */
     footer { background:#222; color:#fff; padding:40px 20px; }
@@ -55,11 +38,14 @@
     .footer-col { flex:1; min-width:200px; }
     .footer-col h3 { margin-bottom:10px; }
     .footer-col a { color:#fff; transition:0.3s; }
-    .footer-col a:hover { color:#0078d7; }
+    .footer-col a:hover { color:#4CAF50; }
     .footer-bottom { text-align:center; margin-top:20px; font-size:0.9em; color:#aaa; }
 
     /* Responsive */
-    @media(max-width:768px){ .hero-content h1{font-size:2rem;} .hero-content p{font-size:1rem;} .intro h2{font-size:1.7rem;} }
+    @media(max-width:768px){ 
+      .hero h1{font-size:2rem;} 
+      .hero p{font-size:1rem;} 
+    }
   </style>
 </head>
 <body>
@@ -67,28 +53,15 @@
   <!-- HERO -->
   <header class="hero">
     <div class="hero-overlay">
-      <img src="logo.png" alt="Échome Énergies" class="logo">
-      <div class="hero-content">
-        <h1>Un investissement durable, une rentabilité immédiate</h1>
-        <p>Recevez votre étude gratuite et personnalisée.<br>Réponse garantie sous 48h par un expert Échome Énergies.</p>
-        <a href="#formulaire" class="cta">Demander mon étude</a>
-      </div>
+      <img src="assets/logo.png" alt="Echome Energies" class="logo">
+      <h1>Obtenez votre étude photovoltaïque sur-mesure</h1>
+      <p>Indiquez vos informations pour recevoir une estimation personnalisée pour votre projet professionnel.</p>
     </div>
   </header>
 
-  <!-- INTRO -->
-  <section class="intro">
-    <div class="container">
-      <h2>Des solutions solaires pensées pour les entreprises et collectivités</h2>
-      <p>Ombrières, toitures industrielles, bâtiments tertiaires…  
-         Nos experts vous accompagnent de l’étude jusqu’à l’installation, avec un suivi complet et certifié RGE.</p>
-    </div>
-  </section>
-
   <!-- FORMULAIRE -->
-  <section id="formulaire" class="form-section">
+  <section class="form-section">
     <div class="container">
-      <h2>Demandez votre étude gratuite</h2>
       <form action="https://formspree.io/f/your-id" method="POST">
 
         <label for="structure">Type de structure</label>
@@ -113,14 +86,9 @@
         <label for="localisation">Localisation du projet</label>
         <input type="text" id="localisation" name="localisation" placeholder="Ville / Code postal" required>
 
-        <!-- SLIDER PUISSANCE -->
-        <label for="surface">Surface disponible (m²)</label>
-        <div class="slider-wrapper">
-          <input type="range" id="surface" name="surface" min="50" max="1500" step="10" value="100" oninput="updatePuissance()">
-          <span id="puissanceBadge" class="puissance-badge">20 kWc</span>
-        </div>
-        <output id="surfaceValue">100</output> m²
-        <input type="hidden" id="puissance" name="puissance">
+        <label for="puissance">Puissance souhaitée (kWc)</label>
+        <input type="range" id="puissance" name="puissance" min="10" max="200" step="5" value="50" oninput="puissanceOutput.value = puissance.value + ' kWc'">
+        <output id="puissanceOutput">50 kWc</output>
 
         <label for="message">Précisions complémentaires</label>
         <textarea id="message" name="message" rows="4" placeholder="Expliquez votre projet..."></textarea>
@@ -131,6 +99,49 @@
         <label for="tel">Téléphone</label>
         <input type="tel" id="tel" name="tel" required>
 
+        <!-- CAPTCHA -->
+        <div class="g-recaptcha" data-sitekey="YOUR_SITE_KEY"></div>
+
         <button type="submit" class="cta">Envoyer ma demande</button>
+
+        <p class="confidentialite">
+          <img src="assets/cadenas.png" alt="Confidentialité"> Vos données resteront strictement confidentielles et ne seront jamais partagées.
+        </p>
       </form>
-      <p class="confidentialite">Vos données resteront strictement confidentielles et ne seront jamais partagées.</p
+    </div>
+  </section>
+
+  <!-- FOOTER -->
+  <footer class="footer">
+    <div class="container footer-grid">
+      <div class="footer-col">
+        <h3>Echome Energies</h3>
+        <p>ZI La Galicière<br>38210 Saint-Quentin-sur-Isère</p>
+        <p>Tél : <a href="tel:0476373462">04 76 37 34 62</a></p>
+        <p>Email : <a href="mailto:contact@echome-energies.fr">contact@echome-energies.fr</a></p>
+      </div>
+      <div class="footer-col">
+        <h3>Suivez-nous</h3>
+        <div class="social-links">
+          <a href="#" target="_blank">LinkedIn</a> |
+          <a href="#" target="_blank">Facebook</a> |
+          <a href="#" target="_blank">Twitter</a>
+        </div>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      &copy; 2025 Echome Energies – Solutions photovoltaïques professionnelles
+    </div>
+  </footer>
+
+<script>
+  const puissance = document.getElementById('puissance');
+  const puissanceOutput = document.getElementById('puissanceOutput');
+  puissanceOutput.value = puissance.value + " kWc";
+  puissance.addEventListener('input', () => {
+    puissanceOutput.value = puissance.value + " kWc";
+  });
+</script>
+
+</body>
+</html>
