--- a/index.html
+++ b/index.html
@@ -1,146 +1,120 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Echome Energies – Étude photovoltaïque sur-mesure</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-  <style>
-    /* GLOBAL */
-    body { font-family: Arial, sans-serif; margin:0; padding:0; background:#f7f7f7; color:#333; }
-    a { text-decoration:none; color: inherit; }
-    h1,h2,h3 { margin:0; }
-    .container { max-width:1100px; margin:0 auto; padding:20px; }
-
-    /* HERO */
-    .hero { position:relative; height:60vh; background:url('assets/hero-bg.jpg') center/cover no-repeat; display:flex; align-items:center; justify-content:center; color:#fff; text-align:center; }
-    .hero-overlay { background:rgba(0,0,0,0.5); width:100%; height:100%; display:flex; flex-direction:column; align-items:center; justify-content:center; padding:20px; }
-    .hero h1 { font-size:2.5rem; margin-bottom:15px; }
-    .hero p { font-size:1.2rem; }
-
-    /* FORMULAIRE */
-    .form-section { padding:60px 20px; background:#f7f7f7; }
-    form { max-width:700px; margin:0 auto; background:#fff; padding:30px; border-radius:12px; box-shadow:0 4px 15px rgba(0,0,0,0.1); }
-    label { display:block; margin-top:15px; font-weight:bold; }
-    input, select, textarea { width:100%; padding:10px; margin-top:5px; border-radius:6px; border:1px solid #ccc; font-size:1rem; }
-    textarea { resize:vertical; }
-    input[type="range"] { width:100%; margin-top:10px; }
-    output { display:block; text-align:right; margin-top:5px; font-weight:bold; }
-    button.cta { background:#0078d7; color:#fff; padding:15px 30px; font-size:1.2rem; border:none; border-radius:12px; margin-top:20px; cursor:pointer; box-shadow:0 4px 10px rgba(0,0,0,0.2); transition:0.3s; }
-    button.cta:hover { transform:translateY(-3px); box-shadow:0 6px 15px rgba(0,0,0,0.25); }
-    .confidentialite { margin-top:15px; font-size:0.9rem; color:#555; display:flex; align-items:center; gap:8px; }
-    .confidentialite img { width:16px; height:16px; }
-
-    /* FOOTER */
-    footer { background:#222; color:#fff; padding:40px 20px; }
-    .footer-grid { display:flex; flex-wrap:wrap; gap:20px; }
-    .footer-col { flex:1; min-width:200px; }
-    .footer-col h3 { margin-bottom:10px; }
-    .footer-col a { color:#fff; transition:0.3s; }
-    .footer-col a:hover { color:#4CAF50; }
-    .footer-bottom { text-align:center; margin-top:20px; font-size:0.9em; color:#aaa; }
-
-    /* Responsive */
-    @media(max-width:768px){ 
-      .hero h1{font-size:2rem;} 
-      .hero p{font-size:1rem;} 
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Echome Energies – Étude photovoltaïque sur-mesure</title>
+<link rel="stylesheet" href="style.css">
+<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
 <body>
 
-  <!-- HERO -->
-  <header class="hero">
-    <div class="hero-overlay">
-      <img src="assets/logo.png" alt="Echome Energies" class="logo">
-      <h1>Obtenez votre étude photovoltaïque sur-mesure</h1>
-      <p>Indiquez vos informations pour recevoir une estimation personnalisée pour votre projet professionnel.</p>
+<!-- HERO -->
+<header class="hero">
+  <div class="hero-overlay">
+    <img src="assets/logo.png" alt="Echome Energies" class="logo">
+    <h1>Obtenez votre étude photovoltaïque sur-mesure</h1>
+    <p>Estimation rapide adaptée à votre projet professionnel</p>
+  </div>
+</header>
+
+<!-- FORMULAIRE -->
+<section class="form-section">
+<div class="container">
+<form action="https://formspree.io/f/your-id" method="POST">
+
+<label for="structure">Type de structure</label>
+<select name="structure" id="structure" required>
+  <option value="">-- Sélectionnez --</option>
+  <option value="entreprise">Entreprise</option>
+  <option value="collectivite">Collectivité</option>
+  <option value="artisan">Artisan</option>
+  <option value="promoteur">Promoteur</option>
+  <option value="autre">Autre</option>
+</select>
+
+<label for="batiment">Type de bâtiment</label>
+<select name="batiment" id="batiment" required>
+  <option value="">-- Sélectionnez --</option>
+  <option value="industriel">Industriel</option>
+  <option value="tertiaire">Tertiaire</option>
+  <option value="agricole">Agricole</option>
+  <option value="autre">Autre</option>
+</select>
+
+<label for="localisation">Localisation du projet</label>
+<input type="text" id="localisation" name="localisation" placeholder="Ville / Code postal" required>
+
+<label for="puissance">Puissance souhaitée (kWc)</label>
+<input type="range" id="puissance" name="puissance" min="10" max="200" step="5" value="50" oninput="updateOutput()">
+<output id="puissanceOutput">50 kWc – ~300 m²</output>
+
+<label for="message">Précisions complémentaires</label>
+<textarea id="message" name="message" rows="4" placeholder="Expliquez votre projet..."></textarea>
+
+<label for="email">Votre email professionnel</label>
+<input type="email" id="email" name="email" required>
+
+<label for="tel">Téléphone</label>
+<input type="tel" id="tel" name="tel" required>
+
+<!-- CAPTCHA -->
+<div class="g-recaptcha" data-sitekey="YOUR_SITE_KEY"></div>
+
+<button type="submit" class="cta">Envoyer ma demande</button>
+
+<p class="confidentialite"><span>🔒</span> Vos données resteront strictement confidentielles et ne seront jamais partagées.</p>
+</form>
+</div>
+</section>
+
+<!-- FOOTER -->
+<footer>
+<div class="container footer-grid">
+  <div class="footer-col">
+    <h3>Echome Energies</h3>
+    <p>1159 Rue de la Galandrine<br>38210 Saint-Quentin-Sur-Isère</p>
+    <p>Tél : <a href="tel:0476373462">04 76 37 34 62</a></p>
+    <p>Email : <a href="mailto:contact@echome-energies.fr">contact@echome-energies.fr</a></p>
+  </div>
+  <div class="footer-col">
+    <h3>Nos certifications</h3>
+    <div class="certifications">
+      <img src="assets/logo-rge.png" alt="RGE">
+      <img src="assets/logo-qualipv500.png" alt="QualiPV 500">
+      <img src="assets/logo-recharge-elec.png" alt="Recharge Elec+">
     </div>
-  </header>
-
-  <!-- FORMULAIRE -->
-  <section class="form-section">
-    <div class="container">
-      <form action="https://formspree.io/f/your-id" method="POST">
-
-        <label for="structure">Type de structure</label>
-        <select name="structure" id="structure" required>
-          <option value="">-- Sélectionnez --</option>
-          <option value="entreprise">Entreprise</option>
-          <option value="collectivite">Collectivité</option>
-          <option value="artisan">Artisan</option>
-          <option value="promoteur">Promoteur</option>
-          <option value="autre">Autre</option>
-        </select>
-
-        <label for="batiment">Type de bâtiment</label>
-        <select name="batiment" id="batiment" required>
-          <option value="">-- Sélectionnez --</option>
-          <option value="industriel">Industriel</option>
-          <option value="tertiaire">Tertiaire</option>
-          <option value="agricole">Agricole</option>
-          <option value="autre">Autre</option>
-        </select>
-
-        <label for="localisation">Localisation du projet</label>
-        <input type="text" id="localisation" name="localisation" placeholder="Ville / Code postal" required>
-
-        <label for="puissance">Puissance souhaitée (kWc)</label>
-        <input type="range" id="puissance" name="puissance" min="10" max="200" step="5" value="50" oninput="puissanceOutput.value = puissance.value + ' kWc'">
-        <output id="puissanceOutput">50 kWc</output>
-
-        <label for="message">Précisions complémentaires</label>
-        <textarea id="message" name="message" rows="4" placeholder="Expliquez votre projet..."></textarea>
-
-        <label for="email">Votre email professionnel</label>
-        <input type="email" id="email" name="email" required>
-
-        <label for="tel">Téléphone</label>
-        <input type="tel" id="tel" name="tel" required>
-
-        <!-- CAPTCHA -->
-        <div class="g-recaptcha" data-sitekey="YOUR_SITE_KEY"></div>
-
-        <button type="submit" class="cta">Envoyer ma demande</button>
-
-        <p class="confidentialite">
-          <img src="assets/cadenas.png" alt="Confidentialité"> Vos données resteront strictement confidentielles et ne seront jamais partagées.
-        </p>
-      </form>
+  </div>
+  <div class="footer-col">
+    <h3>Liens utiles</h3>
+    <ul>
+      <li><a href="cgv.html">Conditions Générales de Vente</a></li>
+      <li><a href="mentions-legales.html">Mentions légales</a></li>
+      <li><a href="politique-confidentialite.html">Politique de confidentialité</a></li>
+    </ul>
+    <h3>Suivez-nous</h3>
+    <div class="social-links">
+      <a href="#" target="_blank">LinkedIn</a>
+      <a href="#" target="_blank">Facebook</a>
+      <a href="#" target="_blank">Twitter</a>
     </div>
-  </section>
-
-  <!-- FOOTER -->
-  <footer class="footer">
-    <div class="container footer-grid">
-      <div class="footer-col">
-        <h3>Echome Energies</h3>
-        <p>ZI La Galicière<br>38210 Saint-Quentin-sur-Isère</p>
-        <p>Tél : <a href="tel:0476373462">04 76 37 34 62</a></p>
-        <p>Email : <a href="mailto:contact@echome-energies.fr">contact@echome-energies.fr</a></p>
-      </div>
-      <div class="footer-col">
-        <h3>Suivez-nous</h3>
-        <div class="social-links">
-          <a href="#" target="_blank">LinkedIn</a> |
-          <a href="#" target="_blank">Facebook</a> |
-          <a href="#" target="_blank">Twitter</a>
-        </div>
-      </div>
-    </div>
-    <div class="footer-bottom">
-      &copy; 2025 Echome Energies – Solutions photovoltaïques professionnelles
-    </div>
-  </footer>
+  </div>
+</div>
+<div class="footer-bottom">&copy; 2025 Echome Energies – Solutions photovoltaïques professionnelles</div>
+</footer>
 
 <script>
-  const puissance = document.getElementById('puissance');
-  const puissanceOutput = document.getElementById('puissanceOutput');
-  puissanceOutput.value = puissance.value + " kWc";
-  puissance.addEventListener('input', () => {
-    puissanceOutput.value = puissance.value + " kWc";
-  });
+const puissance = document.getElementById('puissance');
+const puissanceOutput = document.getElementById('puissanceOutput');
+
+function updateOutput() {
+  const kwc = puissance.value;
+  const surface = Math.round(kwc * 6); // approx. 6 m²/kWc standard
+  puissanceOutput.value = kwc + " kWc – ~" + surface + " m²";
+}
+
+// initial display
+updateOutput();
 </script>
 
 </body>
